--- a/homepage/reset/style.css
+++ b/homepage/reset/style.css
@@ -1,11 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-
-* {
+*{
     margin: 0;
     padding: 0;
-    font-family: "Poppins", sans-serif;
     box-sizing: border-box;
+    font-family: Poppins, sans-serif;
 }
 
 body{
@@ -13,39 +11,36 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url(/1.jpg);
-    backdrop-filter: blur(20px);
+    background: url('/homepage/reset/1.jpg') no-repeat;
     background-size: cover;
     background-position: center;
 }
 
-.wrapper{
-    justify-content: center;
+.wrapper {
     width: 420px;
     height: 100vh;
-    background: transparent;
-    border: 2px solid rgba(225, 225, 225, .2);
+    background: transparent, #ff417a;
+    border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(20px);
     box-shadow: 0 0 10px rgba(0, 0, 0, .2);
     color: #ffffff;
-    border-radius: 5px;
+    border-radius: 10px;
     padding: 30px 40px;
 }
 
 .wrapper h1{
-    font-size: 30px;
+    font-size: 36px;
     text-align: center;
 }
 
-.wrapper .input-box{
-    position: relative;
+.wrapper .reset-box{
     width: 100%;
-    height: 50%;
-    background: transparent;
+    height: 50px;
     margin: 30px 0;
 }
 
-.input-box input{
+
+.reset-box input{
     width: 100%;
     height: 100%;
     background: transparent;
@@ -55,70 +50,53 @@ body{
     border-radius: 40px;
     font-size: 16px;
     color: #ffffff;
-    padding: 5px 15px 5px 15px;
+    padding: 20px 45px 20px 20px;
 }
 
-.input-box input::placeholder{
+.reset-box input::placeholder{
     color: #ffffff;
 }
 
-.input-box i{
+
+.reset-box i{
     position: absolute;
     right: 20px;
-    top: 50%;
+    top: 50px;
     transform: translateY(-50%);
     font-size: 20px;
-}
-
-#h{
-    cursor: not-allowed;
-}
-
-.wrapper .remember{
-    display: flex;
-    justify-content: center;
-    font-size: 14.5px;
-    margin: -15px 0 15px;
-}
-
-.remember label input{
-    accent-color: #ff417a;
-    margin-right: 3px;
-    cursor: pointer;
 }
 
 .wrapper .btn{
     width: 100%;
     height: 45px;
     background: #ffffff;
+    color: #ff417a;
     border: none;
     outline: none;
     border-radius: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     cursor: pointer;
     font-size: 16px;
-    color: #ff417a;
     font-weight: 600;
-    transition: 0.2s ease;
 }
 
-.wrapper .btn:hover{
+.wrapper .btn:active{
     background-color: #ff417a;
     color: #ffffff;
 }
 
-.wrapper .login-link{
+.wrapper .back{
     font-size: 14.5px;
     text-align: center;
     margin: 20px 0 15px;
 }
 
-.login-link p a{
-    color: #ff417a;
+.back p a{
+    color: #ffffff;
     text-decoration: none;
     font-weight: 600;
 }
 
-.login-link p a:hover{
+.back p a:active{
     text-decoration: underline;
 }
