--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .body{
-  background: url(1.jpg);
-  justify-content: center;
-  display: center;
+  background: url(1.jpg), #000000;
+  background-size: cover;
 }
 
 .hd{
@@ -14,6 +15,7 @@
 #txt{
 display: flex;
 justify-content: center;
+margin-left: 18px;
 padding-top: 10px;
 color: #ffffff;
 font-family: 'Courier New', Courier, monospace;
@@ -47,6 +49,11 @@ i:hover{
   list-style: none;
 }
 
+#mu{
+  position: absolute;
+  margin-top: -9px;
+}
+
 /*DropDown*/
 
 details{
@@ -58,14 +65,26 @@ details > summary{
   list-style: none;
 }
 
+summary::-webkit-details-marker{
+  display: none;
+}
+
+summary::-moz-list-bullet{
+  list-style: none;
+}
+
 details a{
   display: none;
   text-align: center;
 }
 
 .a{
-  background-color: #ff417a;
-  border-radius: 10px;
+  background: transparent, #ff417a;
+    border: 2px solid rgba(225, 225, 225, .2);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2), #ff417a;
+    border-radius: 10px;
+    margin-top: 10px;
 }
 
 .dropdown a{
@@ -76,6 +95,15 @@ details a{
   font-weight: bold;
   height: 20px;
   padding: 5px;
+  margin-top: 10px;
+}
+
+.dropdown a:active{
+  color: #ff417a;
+}
+
+.dropdown a:hover{
+  color: #ff417a;
 }
 
 #dm{
@@ -116,7 +144,7 @@ a:hover{
   display: flex;
   justify-content: center;
   border-radius: 10px;
-  background-color: #000000;
+  background-color: transparent;
 
 }
 
@@ -125,6 +153,7 @@ a:hover{
   display: flex;
   justify-content: center;
   height: 140px;
+  width: 100vw;
 }
 
 .bottom{
@@ -138,7 +167,8 @@ a:hover{
   display: flex;
   justify-content: center;
   border-radius: 5px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Poppins, sans-serif;
+  font-size: small;
 }
 
 .btn{
@@ -147,13 +177,16 @@ a:hover{
 }
 
 #btn{
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: Poppins, sans-serif;
+  background-color: #ff417a;
+  color: #ffffff;
   cursor: pointer;
   border-radius: 5px;
   transition: 0.3s ease;
 }
 
-#btn:hover{
+#btn:active{
+  background-color: #ffffff;
   color: #ff417a;
 }
 
@@ -174,4 +207,34 @@ a:hover{
   font-family: monospace;
   font-style: italic;
   font-weight: bold;
+}
+
+#search-box::placeholder{
+  font-family: Poppins, sans-serif;
+  color: #ffffff;
+  padding: 5px;
+}
+
+#search-box{
+  background-color: #ff417a;
+  border-radius: 9px;
+}
+
+.search-box input{
+  color: #ffffff;
+}
+
+#search-button{
+  font-family: Poppins, sans-serif;
+  font-style: italic;
+  font-size: 11px;
+  background-color: #ff417a;
+  border-radius: 9px;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+#search-button:active{
+  background-color: #ffffff;
+  color: #ff417a;
 }
